--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -372,40 +372,40 @@ Aussi, un nouveau comité est élu le 9 mai. Ces nouveaux membres sont des blanq
                 
         <p><b><br>3&#8239;-&#8239;Les actions de la Commune et les 49 procès verbaux des séances de la Commune<A NAME="3"></A> </b>
 		
-		<p><span>La Commune est proclamée le 28 mars 1871 à l'Hôtel de Ville. Dès le 29 mars les nouveaux élus se mettent au travail. Le gouvernement communal est composé de dix commissions celles des finances, 
+		<p><span>La Commune est proclamée le 28 mars 1871 à l'Hôtel de Ville. Dès le 29 mars les nouveaux élus se mettent au travail. Le gouvernement communal est composé de dix commissions&#8239;: celles des finances, 
 de la justice, de la sûreté générale, du travail et de l’échange, des subsistances, des relations extérieures, des services publics et de la commission exécutive permanente.
 Les commissions assurent la tutelle des principales administrations. Elles collaborent avec de nombreuses organisations dont l’Union des femmes pour la défense de Paris et les soins aux blessés, le Comité des vingt arrondissements, les clubs (qui sont, pour beaucoup, mixtes), 
 l’Association Internationale des Travailleurs, des syndicats, des associations.
-Cette collaboration permet au peuple de s’impliquer dans l’exercice du pouvoir. De plus tous les élus sont révocable à tout moment.
+Cette collaboration permet au peuple de s’impliquer dans l’exercice du pouvoir. De plus tous les élus sont révocables à tout moment.
 <br>- Le 30 mars, on instaure la reconnaissance de la citoyenneté pour les étrangers.
 <br>- Le 1er avril on décide que le traitement le plus élevé d'un employé
 de la Commune, donc aussi de ses membres, ne pourrait dépasser 6.000 francs. 
 <br>- Le
-lendemain sont décrétées la séparation de l'Église et de l'État, l'école laïque, obligatoire, pour les filles comme les garçons et gratuite pour tous, ainsi que la suppression du
-budget des cultes, ainsi que la transformation de tous les biens ecclésiastiques en propriété nationale en conséquence &#8239;:
+lendemain sont décrétées la séparation de l'Église et de l'État, l'école laïque, obligatoire, pour les filles comme les garçons et gratuite pour tous, la suppression du
+budget des cultes, ainsi que la transformation de tous les biens ecclésiastiques en propriété nationale en conséquence&#8239;:
 <br>- le 8 avril, on ordonne de bannir des écoles tous les
-symboles, images, prières, dogmes religieux, bref «&#8239;tout ce qui relève de la conscience individuelle de chacun&#8239;», ordre qui fut réalisé peu à peu. 
+symboles, images, prières, dogmes religieux, bref «&#8239;tout ce qui relève de la conscience individuelle de chacun&#8239;», ordre qui est réalisé peu à peu. 
 <br>- Le 5 avril, en présence des
 exécutions de combattants de la Commune prisonniers, auxquelles procédaient quotidiennement les troupes versaillaises, un décret est promulgué, prévoyant l'arrestation
 d'otages, mais il n'est jamais exécuté. 
 <br>-Le 7 avril, le 137e bataillon de la garde nationale
 va chercher la guillotine et la brûle publiquement, au milieu de la liesse populaire. 
-<br>- Le 10 avril est voté le  décret voté à l'unanimité concernant les pensions pour les famille (veuves, enfants, parents, frères et sœurs) de gardes nationaux morts au combat.
+<br>- Le 10 avril est voté le décret à l'unanimité concernant les pensions pour les familles (veuves, enfants, parents, frères et sœurs) de gardes nationaux morts au combat.
 Le décret légitime de fait l’union libre (ou concubinage, c’est-à-dire l’union de fait, stable et continue entre 2 personnes). Il confère à la famille constituée hors mariage (concubins, enfants naturels) sa première reconnaissance légale.
-L’article 2 déclare que chacun des enfants, reconnus ou non, recevra, jusqu’à l’âge de dix-huit ans, une pension annuelle de 365 francs, payable  par douzièmes.
-<br>- Le 11 avril avec la création de l’Union des femmes pour la défense de Paris et les soins aux blessés.
+L’article 2 déclare que chacun des enfants, reconnus ou non, recevra, jusqu’à l’âge de dix-huit ans, une pension annuelle de 365 francs, payable par douzièmes.
 <br>- Le 12 avril la Commune décide de renverser la colonne Vendôme, symbole du chauvinisme et de l'excitation des peuples à la discorde, que Napoléon avait fait couler,
-après la guerre de 1809, avec les canons conquis. Ce qui fut réalisé le 16 mai. 
-<br>- Le 16
-avril, la Commune fait un recensement des ateliers fermés par les fabricants et
+après la guerre de 1809, avec les canons conquis. Ce qui a été réalisé le 16 mai. 
+<br>- Le 16 avril, la Commune fait un recensement des ateliers fermés par les fabricants et
 l'élaboration de plans pour donner la gestion de ces entreprises aux ouvriers qui y
-travaillaient jusque-là et devaient être réunis en associations coopératives, ainsi que
+travaillaient jusque-là et afin d'être réunis en associations coopératives, ainsi que
 pour organiser ces associations en une seule grande fédération. 
+<br>- Le 18 avril, la Commune rend un décret concernant la remise à toujours du
+paiement des échéances (abolition des dettes et des créanciers).
 <br>- Le 20, elle abolit le
 travail de nuit des boulangers, ainsi que les bureaux de placement, monopolisés depuis le Second Empire par des individus choisis par la police et exploiteurs d'ouvriers, de premier ordre ; ces bureaux furent affectés aux mairies des vingt arrondissements de Paris. 
 <br>- Le 25 avril, la Commune ordonne la réquisition des logements vacants pour les sans domicile.
 <br>- Le 30 avril, elle ordonne la suppression des monts-de-piété, parce
-qu'ils constituaient une exploitation privée des ouvriers et étaient en contradiction
+qu'ils constituent une exploitation privée des ouvriers et sont en contradiction
 avec le droit de ceux-ci à leurs instruments de travail et au crédit. 
 <br>- Le 5 mai, elle
 décide de faire raser la chapelle expiatoire élevée en réparation de l'exécution de
