--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -93,9 +93,9 @@
                         <a font color="purple" href="#6" target="_self">7&#8239;-&#8239;Le procès des membres de la Commune</a><br>
                         <a font color="purple" href="#7" target="_self">8&#8239;-&#8239;Document sur l'activité et le procès de Courbet pendant la Commune de Paris</a><br>
                         <a font color="purple" href="#8" target="_self">9&#8239;-&#8239;Les journaux de la Commune</a><br>
-                        <a font color="purple" href="#9" target="_self">10&#8239;-&#8239;Les auteurs de la Commune (Jules Vallès trouver d'autres auteurs d'époque avec un accès à leurs ouvrages)</a><br>
+                        <a font color="purple" href="#9" target="_self">10&#8239;-&#8239;Les auteurs de la Commune</a><br>
                         <a font color="purple" href="#10" target="_self">11&#8239;-&#8239;Productions réalisées sur la Commune de Paris (1871)</a><br>
-                        <a font color="purple" href="#11" target="_self">12&#8239;-&#8239;Autres sites proposant un large pannel d'information sur la Commune (trouver d'autres liens)</a><br>
+                        <a font color="purple" href="#11" target="_self">12&#8239;-&#8239;Autres sites proposant un large panel d'informations sur la Commune</a><br>
         
 								<a id="carte" rel="carte">
 				<img src="https://drive.google.com/uc?id=1tM5GIsX2l50XmOXowpIMSUKtBclEngAE" alt="carte" width="300" height="auto" />
@@ -851,7 +851,7 @@ Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfle
 				<p><span><i>La Commune (Paris, 1871)</i>, WATKINS,Peter</p>
 
                 
-        <p><b><br>11&#8239;-&#8239;Autres sites proposant un large pannel d'informations sur la Commune de 1871<A NAME="11"></A> </b></p><span>     
+        <p><b><br>11&#8239;-&#8239;Autres sites proposant un large panel d'informations sur la Commune de 1871<A NAME="11"></A> </b></p><span>     
 					<a id="gallica" rel="" href="https://gallica.bnf.fr/blog/12042018/la-commune-de-paris?mode=desktop">
 					     <u>Blog Gallica, <i>La Commune de Paris </i></u><br></a>
 					<a id="archivesautonomies" rel="archivesautonomies" href="https://archivesautonomies.org/">
