--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -127,13 +127,14 @@ partageons un moment de la vie du camp et apprenons à
 					<p><span>Type de paiement :<span></p>
 					<a href="plagiat_ed_virement.html">
 					<p><span><b>Virement</b></p><span>
-					<p style="color:purple"><span>ou <b>Paypal</b> + 5 euros de livraison</p><span>
+					<p style="color:purple"><span>ou <b>Paypal</b> + 3,50 euros de livraison</p><span>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="W3VZW3J7SWRD8">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal, le réflexe sécurité pour payer en ligne">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 
 						
 					
