--- a/plagiat_ed_virement.html
+++ b/plagiat_ed_virement.html
@@ -97,19 +97,16 @@
             <br>
 				
 
-					<p><span>Prix du/des exemplaires en tout<span></p>
-					<p><span>+ 3,50 euros de frais de port par exemplaire <span></p>
-          				<p><span>= montant total<span></p>
-					<p><span>Raison sociale : Editions Plagiat<span></p>
-
-         				<p><span>France<span></p>
-					<p><span>IBAN : FR76 1027 8060 2700 0209 1280 197<span></p>
-					<p><span>BIC : CMCI FR 2A</p>
-					<p><span>Crédit Mutuel<span></p>
+					<p><span>Prix du/des exemplaires en tout + 3,50 euros de frais de port par exemplaire = montant total<span></p>
+					<p><span>Raison sociale : Editions Plagiat<br>
+						France<br>
+					IBAN : FR76 1027 8060 2700 0209 1280 197<br>
+					BIC : CMCI FR 2A<br>
+					Crédit Mutuel<span></p>
 
 					<p><span>Motif du virement : indiquer le nom de l'ouvrage<span></p>
-					<p><span>Envoyer à l'adresse mail suivante: Nom, Pénom, titre exemplaire<br>
-					<p><span>nombre exemplaires, adresse de livraison</p><span>
+					<p><span>Envoyer à l'adresse mail suivante: Nom, Pénom, titre du ou des exemplaires<br>
+					<p><span>nombre d'exemplaires, adresse de livraison</p><span>
 					<p><span><b>editions-plagiat-admin@protonmail.com</b></p><span>
 
 
