--- a/plagiat_ed_virement.html
+++ b/plagiat_ed_virement.html
@@ -102,11 +102,12 @@
 						France<br>
 					IBAN : FR76 1027 8060 2700 0209 1280 197<br>
 					BIC : CMCI FR 2A<br>
-					Crédit Mutuel<span></p>
-
-					<p><span>Motif du virement : indiquer le nom de l'ouvrage<span></p>
+					Crédit Mutuel
+						<br>Motif du virement : indiquer le nom de l'ouvrage<span></p>
+						
 					<p><span>Envoyer à l'adresse mail suivante: Nom, Pénom, titre du ou des exemplaires<br>
-					<p><span>nombre d'exemplaires, adresse de livraison</p><span>
+					Nombre d'exemplaires :
+					<br>Adresse de livraison</p><span>
 					<p><span><b>editions-plagiat-admin@protonmail.com</b></p><span>
 
 
