--- a/plagiat_ed_boutique_test.html
+++ b/plagiat_ed_boutique_test.html
@@ -12,15 +12,13 @@
 
     <!-- Replace "test" with your own sandbox Business account app client ID -->
 
-    <script src="https://www.paypal.com/sdk/js?client-id=test&currency=USD"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=&currency=USD"></script>
 
     <!-- Set up a container element for the button -->
 
     <div id="paypal-button-container"></div>
 
-    <script>
-
-      paypal.Buttons({
+    <script> src="plagiat_ed_boutique_test.js"</script>
 
         // Order is created on the server and the order id is returned
 
