--- a/plagiat_ed_boutique_test.html
+++ b/plagiat_ed_boutique_test.html
@@ -3,9 +3,10 @@
 <html>
 
   <head>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<title>Editions Plagiat Médiathèque</title>
+<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
+<link rel="stylesheet" href="plagiat_ed_boutique_test.js" />
   </head>
 
   <body>
@@ -17,8 +18,7 @@
     <!-- Set up a container element for the button -->
 
     <div id="paypal-button-container"></div>
-
-    <script> src="plagiat_ed_boutique_test.js"</script>
+<script src="plagiat_ed_boutique_test.js"></script>
 
         // Order is created on the server and the order id is returned
 
