--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -87,10 +87,14 @@
 	
 	<br>
 	<br>
-			<caption><span><h4>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
+			<p><span><h4>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
 			papier au format numérique disponible en libre accès sur notre site.</h4> 
-			Catalogue rangé par ordre alphabétique 
-			<br>Lecture en ligne disponible selon le genre <br>dans les différentes catégories du&#8239;<i>Menu</i><span></caption> 
+
+			<br>Lecture en ligne disponible selon le genre <br>dans les différentes catégories du&#8239;<i>Menu</i>
+			<br><br>Nous n'avons pour l'instant trouvé de meilleurs solutions que paypal pour la vente en ligne.
+							En passant par Paypal vous serez obligé d'y créer un compte, comme sur n'importe quelle boutique en ligne. 
+							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement</p><span>
+ 	<span></p> 
 			
 	         
             <br>
