--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -89,9 +89,9 @@ et de la jeune Judith, venue documenter leur quotidien, nous
 partageons un moment de la vie du camp et apprenons à
 				connaître et à aimer ses habitants.</cite><span>
             <br>
-												<p><span> Nous n'avons pour l'instant trouvé de meilleurs solutions que paypal pour la vente en ligne.
+												<p><b><span> Nous n'avons pour l'instant trouvé de meilleurs solutions que paypal pour la vente en ligne.
 							En passant par Paypal vous serez obligé d'y créer un compte, comme sur n'importe quelle boutique en ligne. 
-							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement</p><span>
+							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement</p></b><span>
  
 <table>
 			    <tr>
