--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -101,7 +101,7 @@ partageons un moment de la vie du camp et apprenons à
 			    		        </td>
 			        <td height="250" id="imagesdesbd"><br>
 				    <a id="Nepasmourircommedeschienss_mamoste_din" rel="catalogue/boutique">
-			            <img src="image_site/IMG_8383.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="auto" height="250" /></a>
+			            <img src="image_site/bd1.jpg" alt="Ne_pas_mourir_comme_des_chiens_mamoste_din" width="auto" height="250" /></a>
 			        </td>
 				
 			    <tr/>					
