--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -89,9 +89,11 @@ et de la jeune Judith, venue documenter leur quotidien, nous
 partageons un moment de la vie du camp et apprenons à
 				connaître et à aimer ses habitants.</cite><span>
             <br>
-												<p><b><span> Nous n'avons pour l'instant trouvé de meilleurs solutions que paypal pour la vente en ligne.
-							En passant par Paypal vous serez obligé d'y créer un compte, comme sur n'importe quelle boutique en ligne. 
-							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement</p></b><span>
+												<p><b><span>Lors du paiement en ligne, deux possibilités s'offriront à vous.
+							La première sera de payer grâce à votre compte Paypal.
+							Sinon vous pourrez payer en ligne directement par carte bancaire, vous serez obligé de donner un mail.
+													C'est sur cet e-mail que sera envoyé la confirmation de votre achat. 
+							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement.</p></b><span>
  
 <table>
 			    <tr>
@@ -110,17 +112,15 @@ partageons un moment de la vie du camp et apprenons à
 					<p><span><i>Ne pas mourir comme des chiens</i><br>
 					<span>de Mamoste Dîn
 					<br>Achevé d'imprimer en mars 2021 à Venise</p>
-					<p><span><b>prix 12 euros</b>, sans frais de port<span></p>
+					<p><span><b>prix 12 euros</b>,  + 3,50 euros de frais de port par ouvrage<span></p>
 
-					<p><span>Editions Plagiat<span></p>
+					<p><span>Editions Plagiat
 					<br>ISBN : 978-2-492221-01-9 <br>
 					Format A5, couverture cartonnée avec rabats<br>
 					104 pages couleurs<span></p>
 
 					<p><span>Type de paiement :<span></p>
-					<a href="plagiat_ed_virement.html">
-					<p><span><b>Virement</b></p><span>
-					<p style="color:purple"><span>ou <b>Paypal</b> + 3,50 euros de livraison</p><span>
+					<p style="color:purple"><span>Achat en ligne</b></p><span>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="W3VZW3J7SWRD8">
