--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -91,10 +91,11 @@
 			papier au format numérique disponible en libre accès sur notre site.</h4> 
 
 			<br>Lecture en ligne disponible selon le genre <br>dans les différentes catégories du&#8239;<i>Menu</i>
-			<br><br>Nous n'avons pour l'instant trouvé de meilleurs solutions que paypal pour la vente en ligne.
-							En passant par Paypal vous serez obligé d'y créer un compte, comme sur n'importe quelle boutique en ligne. 
-							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement</p><span>
- 	<span></p> 
+			<br><br>Lors du paiement en ligne, deux possibilités s'offriront à vous.
+							La première sera de payer grâce à votre compte Paypal.
+							Sinon vous pourrez payer en ligne directement par carte bancaire, vous serez obligé de donner un mail.
+													C'est sur cet e-mail que sera envoyé la confirmation de votre achat. 
+							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement.<span></p> 
 			
 	         
             <br>
