--- a/plagiat_ed_boutique.html
+++ b/plagiat_ed_boutique.html
@@ -87,7 +87,7 @@
 	
 	<br>
 	<br>
-			<p><span><h4>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
+			<caption><span><h4>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
 			papier au format numérique disponible en libre accès sur notre site.</h4> 
 
 			<br>Lecture en ligne disponible selon le genre <br>dans les différentes catégories du&#8239;<i>Menu</i>
@@ -95,7 +95,7 @@
 							La première sera de payer grâce à votre compte Paypal.
 							Sinon vous pourrez payer en ligne directement par carte bancaire, vous serez obligé de donner un mail.
 													C'est sur cet e-mail que sera envoyé la confirmation de votre achat. 
-							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement.<span></p> 
+							<span></caption> 
 			
 	         
             <br>
