--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -291,8 +291,8 @@
 					<u><i>Gardiens de la paix</i></u></span></a>
 				<br><a id="la_prison_dans_la_peau" rel="la_prison_dans_la_peau" href="https://www.arteradio.com/son/61664797/la_prison_dans_la_peau">
 					<u><i>La prison dans la peau</i></u></span></a>
-				<a id="braqueur" rel="arte" href="https://www.arteradio.com/serie/les_braqueurs/768">
-					<u><i>Les braqueurs</i></u></span></p></a>
+				<br><a id="braqueur" rel="arte" href="https://www.arteradio.com/serie/les_braqueurs/768">
+					<u><i>Les braqueurs</i></u></span></a>
 				<br><a id="le_trafiquant" rel="le_trafiquant" href="https://www.arteradio.com/serie/le_trafiquant/2329">
 					<u><i>Le trafiquant</i></u></span></p></a>
 				<p><span>JAPPE, Anselm, 
