--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -822,7 +822,7 @@ Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfle
 				<img src="https://drive.google.com/uc?id=1cuwGA8IHIwC89SzVNP3adyIkCJ5ENWYZ" alt="étoile" width="300" height="auto" />
 				<p><span><i>Ruines du palais des Tuileries </i>, 1871</p><br>					
                
-        <p><b><br>10&#8239;-&#8239;Productions réalisées sur la Commune de Paris (1871)<A NAME="10"></A> </b></p><span>    
+        <p><b><br>10&#8239;-&#8239;Oeuvres réalisées sur la Commune de Paris (1871)<A NAME="10"></A> </b></p><span>    
              
 				<p><span>I.S.,<br>	
 				<a href="https://drive.google.com/uc?id=1-l4FIntu8dwtqf70ju-2NOxtjNClk3cv" title="communeet gravurePdf">
