--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -320,9 +320,9 @@ Tous les délégués à ces organismes sont élus et révocables. Pour le foncti
 									      
                  <h4>Comité central de la Fédération de la Garde Nationale</h4>
 		 <p><span>
-Le comité central de la Garde nationale est pendant la Commune de Paris une assemblée formée des délégués élus par les membres de la Garde nationale. C'est l'instance exécutive de la Fédération de la Garde nationale.
+Le Comité central de la Garde nationale est pendant la Commune de Paris une assemblée formée des délégués élus par les membres de la Garde nationale. C'est l'instance exécutive de la Fédération de la Garde nationale.
 									      <br>Ce comité dirige de fait la ville de Paris du 15 mars au 28 mars 1871. 
-Le comité central vote une motion précisant que la Garde nationale résistera par la force à toute tentative de désarmement. Quand la séance est levée, les délégués vont se joindre à la grande manifestation qui se déroule à la Bastille.
+Le Comité central vote une motion précisant que la Garde nationale résistera par la force à toute tentative de désarmement. Quand la séance est levée, les délégués vont se joindre à la grande manifestation qui se déroule à la Bastille.
 Dès lors, le Comité central et son autorité sont démontrées par l’obéissance du peuple de Paris. Il donne l’ordre de rassembler les canons abandonnés et de les mettre à l’abri, principalement à Montmartre et à Belleville.									      
 Le 10 mars, a lieu un nouvelle assemblée générale et une nouvelle proclamation, dont les termes plus tranchants sont&#8239;: "Plus d’armées permanentes, mais la nation tout entière armée ... Plus d’oppression, d’esclavage ou de dictature d’aucune sorte, mais la nation souveraine, mais les citoyens libres, se gouvernant à leur gré." <br>									      
 Le 19 au matin, l’État a disparu&#8239;: le Gouvernement et la police sont en fuite, l’armée a fraternisé avec le peuple. A neuf heures, le Comité central se réunit. Deux tendances principales s’y affirment : les uns, peu nombreux, veulent marcher sur Versailles et compléter la révolution&#8239;; les autres veulent se légaliser 
