--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -676,7 +676,7 @@ Pour en revenir à la Commune de Paris, Victor Hugo écrivit à Bigot une lettre
 			      
         <p><b><br>7&#8239;-&#8239;Document sur l'activité et le procès de Courbet pendant la Commune de Paris<A NAME="7"></A> </b></p><span>   
                     <a href="https://drive.google.com/uc?id=1AP1s_cHqxU3vIYcU05jY7NjglEMcT4kk" title="coubetPdf">
-		<p><span><u>Courbet pendant la commune(.pdf)</u><span></p></a>                
+		<p><span><u>Fragments sur Gustave Courbet, Commune de 1871 et procès(.pdf)</u><span></p></a>                
           <p><span>Courbet est nommé directeur des Beaux-Arts le 4 septembre, fut maintenu à ce poste par le gouvernement de l’insurrection&#8239;; 
 		  élu à la Commune comme délégué à la mairie du 4 e arrondissement le 26 avril.<br><br>
 		  Dans une lettre à ses parents il parle de la Commune :</p><span>
@@ -770,6 +770,10 @@ Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfle
 					     <u><i>Le Tribun du Peuple (du 17 mai 1871 au 24 mai 1871)</i></u><br></a>
                 
         <p><b><br>9&#8239;-&#8239;Les auteurs de la Commune<A NAME="9"></A> </b></p><span> 
+		<p><span>BLANQUI, Auguste<br>
+			        	<a title="L'armée esclave et opprimée" href="https://www.marxists.org/francais/blanqui/1880/conscription.htm">
+					      <u><i>L'armée esclave et opprimée</i></u></span></a><br>	
+		
 		<p><span>BORGELLA, Frederic Pierre<br>
 			        	<a title="Justice!" href="https://books.google.fr/books?id=oVINzgEACAAJ&printsec=frontcover&hl=fr&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false">
 					      <u><i>Justice ! par un officier d'artillerie de l'armée de Paris, Numéros 1 à 2(.pdf)</i></u></span></a><br>					
