--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -771,9 +771,10 @@ Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfle
                 
         <p><b><br>9&#8239;-&#8239;Les auteurs de la Commune<A NAME="9"></A> </b></p><span> 
 		<p><span>BLANQUI, Auguste<br>
-			        	<a title="L'armée esclave et opprimée" href="https://www.marxists.org/francais/blanqui/1880/conscription.htm">
-					      <u><i>L'armée esclave et opprimée</i></u></span></a><br>	
-		
+			        	<a title="toast de Londres" href="https://www.marxists.org/francais/blanqui/1851/blanqui_toast_londres.htm">
+					      <u><i>Avis au peuple (le toast de Londres)</i>1851</u></span></a><br>	
+					<a title="L'armée esclave et opprimée" href="https://www.marxists.org/francais/blanqui/1880/conscription.htm">
+					      <u><i>L'armée esclave et opprimée</i>1872</u></span></a><br>	
 		<p><span>BORGELLA, Frederic Pierre<br>
 			        	<a title="Justice!" href="https://books.google.fr/books?id=oVINzgEACAAJ&printsec=frontcover&hl=fr&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false">
 					      <u><i>Justice ! par un officier d'artillerie de l'armée de Paris, Numéros 1 à 2(.pdf)</i></u></span></a><br>					
