--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -93,6 +93,13 @@
 					<p><span>BENJAMIN, Walter
 					<br><i><a href="https://drive.google.com/uc?id=1r2F2jvikgee2unAgEZHDNGbDRTajXIPX" title="BENJAMINPdf">
 					<u>L'oeuvre d'art à l'epoque de sa reproduction mécanisée(.pdf)</i></u><span></p></a>
+				<p><span>BLANQUI, Auguste<br>
+			        	<a title="toast de Londres" href="https://www.marxists.org/francais/blanqui/1851/blanqui_toast_londres.htm">
+					      <u><i>Avis au peuple (le toast de Londres)</i>1851</u></span></a><br>	
+					<a title="L'armée esclave et opprimée" href="https://www.marxists.org/francais/blanqui/1880/conscription.htm">
+					      <u><i>L'armée esclave et opprimée</i>1872</u></span></a><br>	
+					<a title="Usure" href="https://www.marxists.org/francais/blanqui/1869/usure.htm">
+					      <u><i>Usure</i>1872</u></span></a><br>	
 				<p><span>CANJUERS, Pierre (Daniel Blanchard)
 					<br><a href="http://debordiana.chez.com/francais/preliminaires.htm" title="Préliminaires pour une définition de l’unité du programme révolutionnaire">
 					<u><i>Préliminaires pour une définition de l’unité du programme révolutionnaire </i></u></a></span></p>
