--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -775,6 +775,8 @@ Pour être dans le sens de la Commune de Paris, je n’ai pas besoin de réfle
 					      <u><i>Avis au peuple (le toast de Londres)</i>1851</u></span></a><br>	
 					<a title="L'armée esclave et opprimée" href="https://www.marxists.org/francais/blanqui/1880/conscription.htm">
 					      <u><i>L'armée esclave et opprimée</i>1872</u></span></a><br>	
+					<a title="Usure" href="https://www.marxists.org/francais/blanqui/1869/usure.htm">
+					      <u><i>Usure</i>1872</u></span></a><br>	
 		<p><span>BORGELLA, Frederic Pierre<br>
 			        	<a title="Justice!" href="https://books.google.fr/books?id=oVINzgEACAAJ&printsec=frontcover&hl=fr&source=gbs_ge_summary_r&cad=0#v=onepage&q&f=false">
 					      <u><i>Justice ! par un officier d'artillerie de l'armée de Paris, Numéros 1 à 2(.pdf)</i></u></span></a><br>					
