--- a/plagiat_ed_miscellanees_commune_archives.html
+++ b/plagiat_ed_miscellanees_commune_archives.html
@@ -71,9 +71,9 @@
     <span><h4><br>Corpus de références
 										<br>-<br>La Commune de Paris (1871)</h4>
 						<p><b><br>Introduction</b></p><span>
-						<p><span><cite>«&#8239;Je suis entre les mains de mes vainqueurs&#8239;: ils veulent ma tête, qu’ils la prennent.
+						<p><span><cite>"&#8239;Je suis entre les mains de mes vainqueurs&#8239;: ils veulent ma tête, qu’ils la prennent.
 							Jamais je ne sauverai ma vie par la lâcheté&#8239;; libre j’ai vécu, j’entends mourir de même. 
-							Je n’ajoute plus qu’un mot&#8239;: la fortune est capricieuse&#8239;; je confie à l’avenir le soin de ma mémoire et de ma vengeance&#8239;!<br>
+							Je n’ajoute plus qu’un mot&#8239;: la fortune est capricieuse&#8239;; je confie à l’avenir le soin de ma mémoire et de ma vengeance&#8239;!"<br>
 </cite>FERRÉ : membre de la Commune de Paris</i></p><br>
 			
 						<p><span>Le corpus que nous introduisons ici cherche à donner les moyens d'appréhender la Commune de Paris de 1871.
