--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -115,10 +115,22 @@ la disparition de deux de ses collègues.</cite><span>
 				<a href="https://zupimages.net/viewer.php?id=23/27/ikna.jpg"><img src="https://zupimages.net/up/23/27/ikna.jpg" alt="" /></a>
 			</a>	
           <a id="partie10">
-				
-				<a href="https://zupimages.net/viewer.php?id=23/27/n2wx.jpg"><img src="https://zupimages.net/up/23/27/n2wx.jpg" alt="" /></a>
+				<img src="https://drive.google.com/uc?id=1K9PSqI7mxnjFN0o1U5yyMPBgkQHdeniM" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
-
+   <a id="parti11">
+				<img src="https://drive.google.com/uc?id=1K9PSqI7mxnjFN0o1U5yyMPBgkQHdeniM" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie12">
+				<img src="https://drive.google.com/uc?id=1Zj3ZjvnoZcsg-SyNZt98N_Bl9U9pvlAn" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie13">
+				<img src="https://drive.google.com/uc?id=1ek4FYA4snOcT_RLcMNu2T4OdwKz44tEN" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie14">
+				<img src="https://drive.google.com/uc?id=1FPGacZ_BVHiulBnyI6Mm1G5CO3OUobs8" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+          <a id="partie10">
+				<img src="https://drive.google.com/uc?id=1Vc9JDo44nOefmDjx8G9Krdc-ohd4cXHI" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
 
 </div>
