--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -129,10 +129,187 @@ la disparition de deux de ses collègues.</cite><span>
          <a id="partie14">
 				<img src="https://drive.google.com/uc?id=1FPGacZ_BVHiulBnyI6Mm1G5CO3OUobs8" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-          <a id="partie10">
+          <a id="partie15">
 				<img src="https://drive.google.com/uc?id=1Vc9JDo44nOefmDjx8G9Krdc-ohd4cXHI" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=1adob1SrJ1RurHwQML0sLzEOYLoZEzmlc" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=1kPIVPZl67ihRsoVyzWXSzS445rpyNJy3" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=1tHmPKH8FgTBLJo-e-wAUbYyERl3xOyvf" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=1dnQd0NYTPWw6UhDuzXknwW6nvuygwtMt" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=10OSEVDF7Yc5kWWKAzyDvxmoirg0tOuQ2" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
+	<a id="parti21">
+				<img src="https://drive.google.com/uc?id=17QhzEK6CE2DgPl_v1U0U4d3ZbLkFQbtv" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
+
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+
+	<a id="parti16">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a> 
+         <a id="partie17">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie18">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>
+         <a id="partie19">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+			</a>	
+        <a id="partie20">
+				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />		
+		
 </div>
 
 
