--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -118,7 +118,7 @@ la disparition de deux de ses collègues.</cite><span>
 				<img src="https://drive.google.com/uc?id=1K9PSqI7mxnjFN0o1U5yyMPBgkQHdeniM" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
    <a id="parti11">
-				<img src="https://drive.google.com/uc?id=1K9PSqI7mxnjFN0o1U5yyMPBgkQHdeniM" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+				<img src="https://drive.google.com/uc?id=1OEFtC6qoe27xdk4Xa73QHZIOQOO_nEf3" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
          <a id="partie12">
 				<img src="https://drive.google.com/uc?id=1Zj3ZjvnoZcsg-SyNZt98N_Bl9U9pvlAn" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
@@ -150,17 +150,17 @@ la disparition de deux de ses collègues.</cite><span>
 	<a id="parti21">
 				<img src="https://drive.google.com/uc?id=17QhzEK6CE2DgPl_v1U0U4d3ZbLkFQbtv" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a> 
-         <a id="partie17">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie22">
+				<img src="https://drive.google.com/uc?id=1c7zhxE2jmRXLqzKdHDq4gMDTc7ncSkIO" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie18">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie23">
+				<img src="image_site/Dans le béton-Mamoste Dîn22.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>
-         <a id="partie19">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+         <a id="partie24">
+				<img src="image_site/Dans le béton-Mamoste Dîn23.jpg" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 			</a>	
-        <a id="partie20">
-				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
+        <a id="partie25">
+				<img src="https://drive.google.com/uc?id=1N-0u3kcgBDjdVGHWJOn-iWydSy7Jccdl" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
 
 	<a id="parti16">
 				<img src="https://drive.google.com/uc?id=" alt="dans_le_beton_mamoste_din" width="850" height="auto" />
